# training-assistant

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
api/: .env.example  alembic.ini  pyproject.toml
api/scripts/: compare_garmin_sync.py  garmin_auth.py  garmin_sync.py  run_garmin_sync.sh  verify_garmin_schema.py
api/src/: config.py  main.py  model_routes.py
api/src/agent/: coach.py  personality.py  tools.py
api/src/db/: connection.py  models.py
api/src/routers/: activities.py  athlete.py  briefings.py  chat.py  dashboard.py  plan.py  races.py  readiness.py  recommendations.py
api/src/scripts/: garmin_auth.py  (+3 more)
api/tests/: test_activities_routes.py  test_agent_tools.py  test_analytics.py  test_assistant_plan.py  test_assistant_plan_service.py  test_athlete_routes.py  test_briefings_routes.py  test_chat.py  test_coach.py  test_dashboard_routes.py  test_dashboard_summary_selection.py  test_db.py  test_garmin_auth.py  test_garmin_config.py  test_garmin_contract.py  test_garmin_refresh_service.py  test_garmin_scheduler.py  test_garmin_schema_migration.py  test_garmin_sync_comparison.py  test_garmin_worker.py  test_garmin_writeback.py  test_health.py  test_memory_store.py  test_model_routes.py  test_no_legacy_garmin_reference.py  test_personality.py  test_plan_changes.py  test_plan_engine.py  test_plan_intelligence.py  test_plan_routes.py  test_races_routes.py  test_readiness.py  test_readiness_routes.py  test_recommendations_routes.py  test_recommendations_service.py  test_recovery_time.py  test_units_formatting.py  test_workout_duration.py
(+95 files in other folders)
